fix:newDeveloper
