# modules/nichos/nichos.routes.js
@@ -27,6 +27,14 @@ router.get("/:id", (req, res, next) => {
   return ctrl.obtenerPorId(req, res, next);
 });
 
+// #swagger.tags = ['Nichos']
+// #swagger.summary = 'Buscar nicho por número + manzana (id o nombre)'
+// #swagger.parameters['numero']    = { in: 'query', required: true, type: 'integer' }
+// #swagger.parameters['manzana_id'] = { in: 'query', required: false, type: 'integer' }
+// #swagger.parameters['manzana']    = { in: 'query', required: false, type: 'string' }
+router.get("/por-numero", ctrl.obtenerPorNumero);
+
+
 // POST /api/nichos
 router.post("/", (req, res, next) => {
   /* 
@@ -60,5 +68,7 @@ router.delete("/:id", (req, res, next) => {
   */
   return ctrl.eliminar(req, res, next);
 });
+
+
 
 module.exports = router;
